[metadata]
name = bonfire
version = 0.1.0
author= Joseph Early
author_email = joseph.early.ai@gmail.com
url= https://github.com/JAEarly/Bonfire
description = Multiple instance learning library implemented using PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    machine-learning
    multiple-instance-learning
    pytorch

[options]
setup_requires =
    setuptools
install_requires =
    latextable
    matplotlib
    numpy
    optuna
    overrides
    Pillow
    scikit-learn
    scipy
    pandas
    texttable
    tqdm
    wandb
packages = find:
